--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,45 +8,96 @@
     tools:context=".MainActivity"
     tools:layout_editor_absoluteY="81dp">
 
+    <TextView
+        android:id="@+id/txtEntermobile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/brandontext_black"
+        android:gravity="center_horizontal"
+        android:inputType="textMultiLine"
+        android:text="Enter Mobile Number"
+        android:textColor="#484848"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></TextView>
 
     <EditText
         android:id="@+id/phonenumber"
-        android:layout_width="0dp"
+        android:layout_width="332dp"
+        android:inputType="number"
         android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
         android:layout_marginEnd="8dp"
-        android:hint="Enter the phone number"
+        android:background="@null"
+        android:fontFamily="@font/brandontext_medium"
+        android:gravity="center_vertical"
+        android:hint=""
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="@+id/countrycode"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/countrycode"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/countrycode" />
 
 
     <TextView
         android:id="@+id/countrycode"
         android:layout_width="wrap_content"
-        android:layout_height="41dp"
+        android:layout_height="32dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/brandontext_medium"
         android:gravity="center_vertical"
+        android:paddingRight="10dp"
         android:text="+91"
         android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="@+id/phonenumber"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/phonenumber" />
+        app:layout_constraintTop_toBottomOf="@+id/MNumber" />
 
     <Button
         android:id="@+id/buttonContinue"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="120dp"
         android:layout_marginEnd="8dp"
-        android:background="@color/colorPrimaryDark"
-        android:text="Continue"
+        android:background="@drawable/round_button"
+        android:fontFamily="@font/brandontext_black"
+        android:text="Register"
         android:textAllCaps="false"
-        android:textColor="#cdd8f1"
+        android:textColor="#fff"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="#D3D3D3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phonenumber" />
+
+    <TextView
+        android:id="@+id/MNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/brandontext_regular"
+        android:text="Mobile Number"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtEntermobile" />
 </android.support.constraint.ConstraintLayout>
