--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -34,7 +34,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="24dp"
         android:inputType="textMultiLine"
-        android:fontFamily="@font/brandontext_black"
+        android:fontFamily="@font/brandontext_medium"
         android:gravity="center_horizontal"
         android:textColor="#484848"
         android:textSize="24sp"
@@ -64,7 +64,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/round_button"
-        android:fontFamily="@font/brandontext_medium"
+        android:fontFamily="@font/brandontext_bold"
         android:text="Get Started for FREE"
         android:textAllCaps="false"
         android:textColor="#fff"
