--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="68dp"
         android:layout_marginEnd="8dp"
-        android:fontFamily="@font/brandontext_black"
+        android:fontFamily="@font/brandontext_medium"
         android:gravity="center_horizontal"
         android:inputType="textMultiLine"
         android:text="Enter Mobile Number"
@@ -32,6 +32,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:background="@null"
+        android:maxLines="1"
+        android:maxLength="10"
         android:fontFamily="@font/brandontext_medium"
         android:gravity="center_vertical"
         android:hint=""
@@ -49,7 +51,7 @@
         android:layout_height="32dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/brandontext_medium"
+        android:fontFamily="@font/brandontext_regular"
         android:gravity="center_vertical"
         android:paddingRight="10dp"
         android:text="+91"
@@ -66,7 +68,7 @@
         android:layout_marginTop="120dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/round_button"
-        android:fontFamily="@font/brandontext_black"
+        android:fontFamily="@font/brandontext_bold"
         android:text="Register"
         android:textAllCaps="false"
         android:textColor="#fff"
