--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -123,26 +123,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view" />
 
+
     <android.support.design.chip.Chip
-        style="@style/Widget.MaterialComponents.Chip.Action"
         android:id="@+id/chip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="155dp"
-        app:chipIcon="@drawable/chip_education"
-        android:layout_marginEnd="157dp"
-        android:layout_marginBottom="102dp"
-        android:text="Education"
+        style="@style/Widget.MaterialComponents.Chip.Action"
+        android:layout_width="140dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="76dp"
         android:checkable="true"
         android:clickable="true"
-        android:paddingBottom="5dp"
+        android:focusable="true"
+        android:gravity="center"
+        android:paddingLeft="-5dp"
         android:paddingTop="5dp"
-
-
-
-        android:textSize="22sp"
+        android:paddingBottom="5dp"
+        android:text="Education"
+        android:textColor="#484848"
+        android:textSize="25sp"
+        app:chipCornerRadius="22dp"
+        app:chipIconSize="35dp"
+        app:iconStartPadding="3dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.572"
+        app:layout_constraintStart_toStartOf="parent"
+        app:textStartPadding="15dp" />
+
+
 
 </android.support.constraint.ConstraintLayout>
