--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,8 @@
 
     </style>
 
+    <style name="ChipTextStyle">
+        <item name="android:textSize">20sp</item>
+    </style>
+
 </resources>
