--- a/app/src/main/res/drawable/round_button.xml
+++ b/app/src/main/res/drawable/round_button.xml
@@ -4,11 +4,9 @@
         android:radius="100dp"
         />
     <gradient
-        android:angle="90"
-        android:centerX="35%"
-
-        android:startColor="#037ef3"
-        android:endColor="#1da2ff"
+        android:angle="0"
+        android:endColor="#037ef3"
+        android:startColor="#1da2ff"
         android:type="linear"
         />
     <padding
