--- a/app/src/main/res/layout/activity_learn_how_it_works.xml
+++ b/app/src/main/res/layout/activity_learn_how_it_works.xml
@@ -9,12 +9,10 @@
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/playerview"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        tools:layout_editor_absoluteY="176dp">
 
     </com.google.android.exoplayer2.ui.PlayerView>
 
