Youtube Player added! Finally!

--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -17,7 +17,7 @@
         android:fontFamily="@font/brandontext_regular"
         android:gravity="center_horizontal"
         android:lineSpacingExtra="6sp"
-        android:textColor="#696969"
+        android:textColor="@color/heading_light"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/getStarted"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,7 +36,7 @@
         android:inputType="textMultiLine"
         android:fontFamily="@font/brandontext_medium"
         android:gravity="center_horizontal"
-        android:textColor="#484848"
+        android:textColor="@color/heading_dark"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/imgReccomend"
         app:layout_constraintEnd_toEndOf="parent"
