--- a/app/src/main/res/layout/activity_for_you.xml
+++ b/app/src/main/res/layout/activity_for_you.xml
@@ -6,13 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".ForYou">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_videolist"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="154dp"
+        app:layout_constraintBottom_toTopOf="@+id/youtube_fragment"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></android.support.v7.widget.RecyclerView>
+
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="match_parent"
-        android:layout_height="147dp"
-        android:layout_marginTop="73dp"
-        android:layout_marginBottom="89dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="179dp"
+        android:layout_marginBottom="13dp"
         android:layout_weight="1"
         android:gravity="center"
         android:text="HElloooo"
@@ -25,12 +35,11 @@
     <fragment
         android:id="@+id/youtube_fragment"
         android:name="com.google.android.youtube.player.YouTubePlayerFragment"
-        android:layout_width="match_parent"
-        android:layout_height="194dp"
-        android:layout_marginTop="89dp"
-        app:layout_constraintCircleRadius="20dp"
-        android:layout_marginBottom="89dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="59dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintCircleRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
