--- a/app/src/main/res/layout/activity_industries.xml
+++ b/app/src/main/res/layout/activity_industries.xml
@@ -17,7 +17,7 @@
         android:fontFamily="@font/brandontext_medium"
         android:gravity="center_horizontal"
         android:text="Select your \npreferred industries"
-        android:textColor="#484848"
+        android:textColor="@color/heading_dark"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/txtTagline"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +34,7 @@
         android:fontFamily="@font/brandontext_regular"
         android:gravity="center_horizontal"
         android:text="We will personalise the products for you"
-        android:textColor="#696969"
+        android:textColor="@color/heading_light"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/gridview"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,15 +65,6 @@
         app:layout_constraintTop_toBottomOf="@+id/txtTagline">
 
     </GridView>
-
-    <ImageView
-        android:id="@+id/iv"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="48dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/Next"
