--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:gravity="center_horizontal"
         android:inputType="textMultiLine"
         android:text="Enter Mobile Number"
-        android:textColor="#484848"
+        android:textColor="@color/heading_dark"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +54,7 @@
         android:fontFamily="@font/brandontext_regular"
         android:gravity="center_vertical"
         android:paddingRight="10dp"
+        android:textColor="@color/heading_dark"
         android:text="+91"
         android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,6 +98,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="40dp"
+        android:textColor="#8b8b8b"
         android:fontFamily="@font/brandontext_regular"
         android:text="Mobile Number"
         android:textSize="20sp"
