--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -16,7 +16,7 @@
         android:fontFamily="@font/brandontext_medium"
         android:gravity="center_horizontal"
         android:text="Tell us more about yourself"
-        android:textColor="#484848"
+        android:textColor="@color/heading_dark"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -140,7 +140,7 @@
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:text="Education"
-        android:textColor="#484848"
+        android:textColor="@color/heading_dark"
         android:textSize="25sp"
         app:chipCornerRadius="22dp"
         app:chipIconSize="35dp"
