--- a/app/src/main/res/layout/activity_verify_phone_number.xml
+++ b/app/src/main/res/layout/activity_verify_phone_number.xml
@@ -91,7 +91,7 @@
         android:gravity="center_horizontal"
         android:inputType="textMultiLine"
         android:text="Please Enter OTP"
-        android:textColor="#484848"
+        android:textColor="@color/heading_dark"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
