--- a/app/src/main/res/layout/industry_card.xml
+++ b/app/src/main/res/layout/industry_card.xml
@@ -22,7 +22,7 @@
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:text="Education"
-        android:textColor="#484848"
+        android:textColor="@color/heading_dark"
         android:textSize="25sp"
         app:chipCornerRadius="22dp"
         app:chipIcon="@drawable/chip_education"
