--- a/app/src/main/res/drawable/round_button_empty.xml
+++ b/app/src/main/res/drawable/round_button_empty.xml
@@ -3,8 +3,15 @@
     <corners
         android:radius="100dp"
         />
-    <solid
-        android:color="#00ffffff"
+    <gradient
+        android:angle="0"
+        android:endColor="#fff"
+        android:startColor="#fff"
+        android:type="linear"
+        />
+    <stroke
+        android:color="@color/colorPrimary"
+        android:width="1dp"
         />
     <padding
         android:left="0dp"
@@ -12,5 +19,8 @@
         android:right="0dp"
         android:bottom="0dp"
         />
-
+    <size
+        android:width="350dp"
+        android:height="60dp"
+        />
 </shape>
