--- a/app/src/main/res/layout/activity_learn_how_it_works.xml
+++ b/app/src/main/res/layout/activity_learn_how_it_works.xml
@@ -6,17 +6,87 @@
     android:layout_height="match_parent"
     tools:context=".LearnHowItWorks">
 
+    <TextView
+        android:id="@+id/txtindustries"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/brandontext_medium"
+        android:gravity="center_horizontal"
+        android:text="Learn how it works"
+        android:textColor="@color/heading_dark"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/skip_illustration"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/playerview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="32dp"
+        android:visibility="gone"
+        app:layout_constraintDimensionRatio="w,9:16"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="176dp">
+        app:layout_constraintTop_toBottomOf="@+id/txtindustries">
+
 
     </com.google.android.exoplayer2.ui.PlayerView>
 
 
+
+    <ImageView
+        android:id="@+id/skip_illustration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity=""
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="100dp"
+        android:src="@drawable/skip_illustration"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/Next"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtindustries" />
+
+    <ImageView
+        android:id="@+id/play"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+
+        android:src="@drawable/play_icon"
+        app:layout_constraintBottom_toBottomOf="@+id/skip_illustration"
+        app:layout_constraintEnd_toEndOf="@+id/skip_illustration"
+        app:layout_constraintStart_toStartOf="@+id/skip_illustration"
+        app:layout_constraintTop_toTopOf="@+id/skip_illustration" />
+
+
+    <Button
+        android:id="@+id/Next"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/round_button_empty"
+        android:fontFamily="@font/brandontext_bold"
+        android:text="Skip"
+        android:textAllCaps="false"
+        android:textColor="@color/colorPrimary"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/skip_illustration"
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </android.support.constraint.ConstraintLayout>
