Upadted to AndroidX! Added carousel in For You Page

--- a/app/src/main/res/layout/industry_card.xml
+++ b/app/src/main/res/layout/industry_card.xml
@@ -8,7 +8,7 @@
     android:layout_width="wrap_content"
     android:layout_gravity="">
 
-    <android.support.design.chip.Chip
+    <com.google.android.material.chip.Chip
         android:id="@+id/chip"
         style="@style/Widget.MaterialComponents.Chip.Action"
         android:layout_width="150dp"
