--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#037ef3</color>
     <color name="heading_dark">#484848</color>
     <color name="heading_light">#696969</color>
+    <color name="navigation_bar_inactive">#707070</color>
+    <color name="white">#ffffff</color>
+    <color name="transparent">#00ffffff</color>
 </resources>
