--- a/app/src/main/res/layout/activity_for_you.xml
+++ b/app/src/main/res/layout/activity_for_you.xml
@@ -12,14 +12,12 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/carouselbody"
                 android:orientation="vertical"
                 android:gravity="center">
-
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -27,7 +25,6 @@
                     android:orientation="vertical">
 
                     <androidx.viewpager.widget.ViewPager
-
                         android:layout_width="0dp"
                         android:layout_height="0dp"
                         android:id="@+id/carousel"
@@ -48,10 +45,9 @@
                     android:layout_marginTop="15dp"
                     app:dotsSpacing="2dp"
                     app:dotsWidthFactor="4"
-                    android:gravity="center|top"
-                    />
-            </LinearLayout>
+                    android:gravity="center|top" />
 
+            </LinearLayout>
             <LinearLayout
                 android:id="@+id/videohelpssell"
                 android:layout_width="match_parent"
@@ -74,8 +70,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_videolist"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true">
+                    android:layout_height="wrap_content">
                 </androidx.recyclerview.widget.RecyclerView>
             </LinearLayout>
 
@@ -94,9 +89,9 @@
                     android:fontFamily="@font/brandontext_medium"
                     android:text="Popular products for you"
                     android:layout_marginStart="24dp"
+                    android:layout_marginBottom="20dp"
                     android:textColor="@color/heading_dark"/>
             </LinearLayout>
-
         </RelativeLayout>
     </ScrollView>
 
@@ -107,7 +102,6 @@
         android:layout_alignParentBottom="true"
         android:background="@color/white"
         app:labelVisibilityMode="labeled"
-        app:itemHorizontalTranslationEnabled="true"
         app:itemIconTint="@drawable/bottom_navigation_colors"
         app:itemTextColor="@drawable/bottom_navigation_colors"
         app:menu="@menu/bottom_navigation_menu">
