--- a/app/src/main/res/layout/fragment_for_you.xml
+++ b/app/src/main/res/layout/fragment_for_you.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ForYou">
+    tools:context=".FragmentForYou">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -77,15 +77,15 @@
 
 
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_marginTop="20dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/rv_categorylist"
-                    android:layout_below="@id/videohelpssell"
-                    android:scrollbars="vertical"
-                    android:orientation="vertical">
-                </androidx.recyclerview.widget.RecyclerView>
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/rv_categorylist"
+                android:layout_below="@id/videohelpssell"
+                android:scrollbars="vertical"
+                android:orientation="vertical">
+            </androidx.recyclerview.widget.RecyclerView>
 
 
         </RelativeLayout>
