--- a/app/src/main/res/layout/activity_navigation_dashboard.xml
+++ b/app/src/main/res/layout/activity_navigation_dashboard.xml
@@ -6,12 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".NavigationDashboard">
 
-    <FrameLayout
-        android:id="@+id/fragment_container"
+
+
+    <com.example.neelanshsethi.sello.CustomViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/fragment_container"
         android:layout_above="@id/bottom_navigation">
-    </FrameLayout>
+    </com.example.neelanshsethi.sello.CustomViewPager>
 
 
 
