--- a/app/src/main/res/layout/activity_navigation_dashboard.xml
+++ b/app/src/main/res/layout/activity_navigation_dashboard.xml
@@ -7,16 +7,18 @@
     tools:context=".NavigationDashboard">
 
 
-
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_above="@id/bottom_navigation">
     <com.example.neelanshsethi.sello.CustomViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/fragment_container"
-        android:layout_above="@id/bottom_navigation">
+        android:id="@+id/fragment_container">
     </com.example.neelanshsethi.sello.CustomViewPager>
 
 
-
+</FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
