--- a/app/src/main/res/layout/fragment_for_you.xml
+++ b/app/src/main/res/layout/fragment_for_you.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:id="@+id/top_layout"
     tools:context=".FragmentForYou">
 
     <androidx.core.widget.NestedScrollView
@@ -61,7 +64,7 @@
                     android:id="@+id/products_for_you"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginBottom="20dp"
                     android:fontFamily="@font/brandontext_medium"
                     android:text="Videos to help you sell better"
@@ -83,7 +86,6 @@
                 android:layout_height="match_parent"
                 android:id="@+id/rv_categorylist"
                 android:layout_below="@id/videohelpssell"
-
                 android:scrollbars="vertical"
                 android:orientation="vertical">
             </androidx.recyclerview.widget.RecyclerView>
@@ -100,7 +102,7 @@
                     android:id="@+id/small_industry_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginBottom="20dp"
                     android:fontFamily="@font/brandontext_medium"
                     android:text="Your Industries"
