--- a/app/src/main/res/drawable/round_button.xml
+++ b/app/src/main/res/drawable/round_button.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners
-        android:radius="100dp"
-        />
-    <gradient
-        android:angle="0"
-        android:endColor="#037ef3"
-        android:startColor="#1da2ff"
-        android:type="linear"
-        />
-    <padding
-        android:left="0dp"
-        android:top="0dp"
-        android:right="0dp"
-        android:bottom="0dp"
-        />
-    <size
-        android:width="350dp"
-        android:height="60dp"
-        />
-</shape>
+
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_enabled="true">
+        <shape
+            android:shape="rectangle">
+            <corners
+                android:radius="100dp"
+                />
+            <gradient
+                android:angle="0"
+                android:endColor="#037ef3"
+                android:startColor="#1da2ff"
+                android:type="linear"
+                />
+            <padding
+                android:left="0dp"
+                android:top="0dp"
+                android:right="0dp"
+                android:bottom="0dp"
+                />
+            <size
+                android:width="350dp"
+                android:height="60dp"
+                />
+        </shape>
+    </item>
+</selector>
