--- a/app/src/main/res/drawable/round_button_empty.xml
+++ b/app/src/main/res/drawable/round_button_empty.xml
@@ -1,26 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners
-        android:radius="100dp"
-        />
-    <gradient
-        android:angle="0"
-        android:endColor="#fff"
-        android:startColor="#fff"
-        android:type="linear"
-        />
-    <stroke
-        android:color="@color/colorPrimary"
-        android:width="1dp"
-        />
-    <padding
-        android:left="0dp"
-        android:top="0dp"
-        android:right="0dp"
-        android:bottom="0dp"
-        />
-    <size
-        android:width="350dp"
-        android:height="60dp"
-        />
-</shape>
+
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_enabled="true">
+        <shape
+            android:shape="rectangle">
+            <corners
+                android:radius="100dp"
+                />
+            <gradient
+                android:angle="0"
+                android:endColor="#fff"
+                android:startColor="#fff"
+                android:type="linear"
+                />
+            <padding
+                android:left="0dp"
+                android:top="0dp"
+                android:right="0dp"
+                android:bottom="0dp"
+                />
+            <stroke
+                android:color="@color/colorPrimary"
+                android:width="1dp"
+                />
+            <size
+                android:width="350dp"
+                android:height="60dp"
+                />
+        </shape>
+    </item>
+</selector>
