--- a/app/src/main/res/layout/activity_industries.xml
+++ b/app/src/main/res/layout/activity_industries.xml
@@ -74,7 +74,8 @@
         android:fontFamily="@font/brandontext_bold"
         android:text="Next"
         android:textAllCaps="false"
-        android:textColor="#fff"
+        android:textColor="@color/white"
+        android:stateListAnimator="@animator/button_animator"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
