--- a/app/src/main/res/layout/activity_learn_how_it_works.xml
+++ b/app/src/main/res/layout/activity_learn_how_it_works.xml
@@ -88,6 +88,7 @@
         android:textAllCaps="false"
         android:textColor="@color/colorPrimary"
         android:textSize="22sp"
+        android:stateListAnimator="@animator/button_animator"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
