--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,6 +70,7 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/round_button"
         android:fontFamily="@font/brandontext_bold"
+        android:stateListAnimator="@animator/button_animator"
         android:text="Register"
         android:textAllCaps="false"
         android:textColor="#fff"
