--- a/app/src/main/res/layout/activity_verify_phone_number.xml
+++ b/app/src/main/res/layout/activity_verify_phone_number.xml
@@ -19,6 +19,7 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/round_button"
         android:fontFamily="@font/brandontext_bold"
+        android:stateListAnimator="@animator/button_animator"
         android:text="Submit OTP"
         android:textAllCaps="false"
         android:textColor="#fff"
