--- a/app/src/main/res/layout/fragment_company.xml
+++ b/app/src/main/res/layout/fragment_company.xml
@@ -8,7 +8,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="20dp"
-        android:id="@+id/rv_videolist"
+        android:id="@+id/rv_companylist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </androidx.recyclerview.widget.RecyclerView>
